adding cpt codes to specimen

--- a/YellowstonePathology/UI/Surgical/TypingWorkspace.xaml
+++ b/YellowstonePathology/UI/Surgical/TypingWorkspace.xaml
@@ -541,6 +541,7 @@
                                                         <TextBox Text="{Binding Path=Modifier, UpdateSourceTrigger=PropertyChanged}" VerticalAlignment="Center" FontWeight="Bold" Margin="2" Width="70"
 																	ToolTip="Modifier" IsEnabled="False"></TextBox>
                                                         <TextBlock Text="{Binding Path=PostDateProxy}" VerticalAlignment="Center" Margin="2" Width="80" ToolTip="Post Date"/>
+                                                        <TextBlock Text="{Binding Path=CodeableDescription}" VerticalAlignment="Center" Margin="2"></TextBlock>
 
                                                     </StackPanel>
                                                 </DataTemplate>
