Add search for ??? in surgical review

--- a/YellowstonePathology/UI/Surgical/SurgicalReview.xaml
+++ b/YellowstonePathology/UI/Surgical/SurgicalReview.xaml
@@ -399,7 +399,7 @@
 
 	</UserControl.Resources>
 	
-	<Grid KeyUp="MainGrid_KeyUp">
+	<Grid Name="MainGrid">
 		<Grid.ColumnDefinitions>
 			<ColumnDefinition Width="*"></ColumnDefinition>
 		</Grid.ColumnDefinitions>
