--- a/YellowstonePathology/UI/Monitor/BlockCountMonitorPage.xaml
+++ b/YellowstonePathology/UI/Monitor/BlockCountMonitorPage.xaml
@@ -23,74 +23,27 @@
 
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"></RowDefinition>
-            <RowDefinition Height="*"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
         </Grid.RowDefinitions>
 
         <TextBlock Grid.Column="0" Grid.Row="0" Margin="10,10,10,10" FontSize="24">Block Count Monitor</TextBlock>
 
-        <ListView Name="ListViewBlockCount" Grid.Column="0" Grid.Row="1" Margin="2,2,2,2" ItemsSource="{Binding Path=BlockCountCollection}" 
-                  HorizontalAlignment="Stretch" FontSize="14" MouseDoubleClick="ListViewBlockCount_DoubleClick">
-            <ListView.ItemContainerStyle>
-                <Style TargetType="ListViewItem">
-                    <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
-                    <Style.Triggers>
-                        <DataTrigger Binding="{Binding State}" Value="Normal">
-                            <Setter Property="Background">
-                                <Setter.Value>
-                                    <SolidColorBrush Color="{StaticResource NormalColor}"/>
-                                </Setter.Value>
-                            </Setter>
-                        </DataTrigger>
-                        <DataTrigger Binding="{Binding State}" Value="Warning">
-                            <Setter Property="Background">
-                                <Setter.Value>
-                                    <SolidColorBrush Color="{StaticResource WarningColor}"/>
-                                </Setter.Value>
-                            </Setter>
-                        </DataTrigger>
-                        <DataTrigger Binding="{Binding State}" Value="Critical">
-                            <Setter Property="Background">
-                                <Setter.Value>
-                                    <SolidColorBrush Color="{StaticResource CriticalColor}"/>
-                                </Setter.Value>
-                            </Setter>
-                        </DataTrigger>
-                    </Style.Triggers>
-                </Style>
-            </ListView.ItemContainerStyle>
-            <ListView.View>
-                <GridView>
-                    <GridViewColumn>
-                        <GridViewColumn.HeaderTemplate>
-                            <DataTemplate>
-                                <TextBlock Text="Yellowstone Pathology Institute Blocks" HorizontalAlignment="Stretch" Width="350" Margin="2,2,2,2"/>
-                            </DataTemplate>
-                        </GridViewColumn.HeaderTemplate>
-                        <GridViewColumn.CellTemplate>
-                            <DataTemplate>
-                                <Grid Width="350" HorizontalAlignment="Left">
-                                    <TextBlock Text="{Binding Path=YPIBlockCount}" HorizontalAlignment="Stretch"/>
-                                </Grid>
-                            </DataTemplate>
-                        </GridViewColumn.CellTemplate>
-                    </GridViewColumn>
-                    <GridViewColumn>
-                        <GridViewColumn.HeaderTemplate>
-                            <DataTemplate>
-                                <TextBlock Text="Bozeman Blocks" HorizontalAlignment="Stretch" Width="350" Margin="2,2,2,2"/>
-                            </DataTemplate>
-                        </GridViewColumn.HeaderTemplate>
-                        <GridViewColumn.CellTemplate>
-                            <DataTemplate>
-                                <Grid Width="350" HorizontalAlignment="Left">
-                                    <TextBlock Text="{Binding Path=BozemanBlockCount}" HorizontalAlignment="Stretch"/>
-                                </Grid>
-                            </DataTemplate>
-                        </GridViewColumn.CellTemplate>
-                    </GridViewColumn>
-                </GridView>
-            </ListView.View>
-        </ListView>
+        <Grid Grid.Column="0" Grid.Row="1" Background="#e5fee7" Margin ="5, 5, 5, 5">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
 
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+            </Grid.RowDefinitions>
+
+            <TextBlock Grid.Column="0" Grid.Row="0" Margin ="5, 5, 50, 5" FontSize="50" FontWeight="Bold" TextAlignment="Right">Yellowstone Pathology Institute Blocks</TextBlock>
+            <TextBlock Grid.Column="0" Grid.Row="1" Margin ="5, 5, 5, 5" FontSize="50" FontWeight="Bold" TextAlignment="Center" Text="{Binding Path=BlockCount.YPIBlockCount}"></TextBlock>
+
+            <TextBlock Grid.Column="1" Grid.Row="0" Margin ="50, 5, 5, 5" FontSize="50" FontWeight="Bold" TextAlignment="Right">Bozeman Blocks</TextBlock>
+            <TextBlock Grid.Column="1" Grid.Row="1" Margin ="5, 5, 5, 5" FontSize="50" FontWeight="Bold" TextAlignment="Center" Text="{Binding Path=BlockCount.BozemanBlockCount}"></TextBlock>
+        </Grid>
     </Grid>
 </UserControl>
