--- a/YellowstonePathology/UI/Monitor/DashboardPage.xaml
+++ b/YellowstonePathology/UI/Monitor/DashboardPage.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="YellowstonePathology.UI.Monitor.BlockCountMonitorPage"
+﻿<UserControl x:Class="YellowstonePathology.UI.Monitor.DashboardPage"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -14,7 +14,10 @@
             <RowDefinition Height="*"></RowDefinition>
         </Grid.RowDefinitions>
 
-        <TextBlock Grid.Column="0" Grid.Row="0" Margin="10,10,10,10" FontSize="24">Block Counts</TextBlock>
+        <StackPanel Grid.Column="0" Grid.Row="0" Orientation="Horizontal">
+            <TextBlock Margin="10,10,10,10" FontSize="24">Dashboard</TextBlock>
+            <TextBlock Margin="10,10,10,10" FontSize="24" Text="{Binding Path=DashboardDate,Converter={StaticResource ShortDateTimeConverter}}"></TextBlock>
+        </StackPanel>
 
         <Grid Grid.Column="0" Grid.Row="1" Background="#e5fee7" Margin ="5, 5, 5, 5" HorizontalAlignment="Center" VerticalAlignment="Center">
             <Grid.ColumnDefinitions>
@@ -37,7 +40,7 @@
             <TextBlock Grid.Column="1" Grid.Row="1" Margin ="5, 5, 5, 5" FontSize="70" TextAlignment="Center" Text="{Binding Path=BlockCount.BozemanBlockCount}"></TextBlock>
 
             <TextBlock Grid.Column="0" Grid.Row="3" Margin ="5, 5, 5, 5" FontSize="70" FontWeight="Bold" TextAlignment="Right" HorizontalAlignment="Right">Total:</TextBlock>
-            <TextBlock Grid.Column="1" Grid.Row="3" Margin ="5, 5, 5, 5" FontSize="70" TextAlignment="Center" Text="{Binding Path=BlockCount.Total}"></TextBlock>
+            <TextBlock Grid.Column="1" Grid.Row="3" Margin ="5, 5, 5, 5" FontSize="70" TextAlignment="Center" Text="{Binding Path=BlockCount.TotalBlockCount}"></TextBlock>
         </Grid>
     </Grid>
 </UserControl>
