--- a/YellowstonePathology/UI/MainWindow.xaml
+++ b/YellowstonePathology/UI/MainWindow.xaml
@@ -57,7 +57,8 @@
                 <MenuItem Header="Acid Wash Orders" Click="MenuItemAcidWashOrders_Click" />
                 <MenuItem Header="Embedding" Click="MenuItemEmbedding_Click" />
                 <MenuItem Header="Retrospective Reviews" Click="MenuItemRetrospectiveReviews_Click" />
-            </MenuItem>
+                    <MenuItem Header="Ventana Stain Mapping" Click="MenuItemVentanaStainMapping_Click" />
+                </MenuItem>
 
             <MenuItem Header="_Client" Name="MenuItemClient">
                 <MenuItem Header="Provider Lookup" Click="MenuItemProviderLookup_Click"></MenuItem>
