--- a/YellowstonePathology/UI/VentanaStainEditDialog.xaml
+++ b/YellowstonePathology/UI/VentanaStainEditDialog.xaml
@@ -20,6 +20,8 @@
             <RowDefinition Height="auto" />
             <RowDefinition Height="auto" />
             <RowDefinition Height="auto" />
+            <RowDefinition Height="auto" />
+            <RowDefinition Height="auto" />
         </Grid.RowDefinitions>
 
 
@@ -38,10 +40,16 @@
         <TextBlock Grid.Row="4" Grid.Column="0" Margin="5,5,5,5" FontSize="14" FontWeight="Bold" TextAlignment="Right">YPI Test Id:</TextBlock>
         <TextBox Grid.Row="4" Grid.Column="1" Margin="5,5,5,5" FontSize="14" TextAlignment="Left" Text="{Binding Path=VentanaBenchMark.YPITestId}" />
 
-        <TextBlock Grid.Row="5" Grid.Column="0" Margin="5,5,5,5" FontSize="14" FontWeight="Bold" TextAlignment="Right">Modifier:</TextBlock>
-        <TextBox Grid.Row="5" Grid.Column="1" Margin="5,5,5,5" FontSize="14" TextAlignment="Left" Text="{Binding Path=VentanaBenchMark.StainModifier}" />
+        <TextBlock Grid.Row="5" Grid.Column="0" Margin="5,5,5,5" FontSize="14" FontWeight="Bold" TextAlignment="Right">Ventana Id:</TextBlock>
+        <TextBox Grid.Row="5" Grid.Column="1" Margin="5,5,5,5" FontSize="14" TextAlignment="Left" Text="{Binding Path=VentanaBenchMark.BarcodeNumber}" />
 
-        <Button Name="ButtonClose" Grid.Column="1" Grid.Row="7" Width="100" Height="40" HorizontalAlignment="Right" Margin="5,5,5,5" Click="ButtonClose_Click">Close</Button>
+        <TextBlock Grid.Row="6" Grid.Column="0" Margin="5,5,5,5" FontSize="14" FontWeight="Bold" TextAlignment="Right">Is Dual Protocol:</TextBlock>
+        <TextBox Grid.Row="6" Grid.Column="1" Margin="5,5,5,5" FontSize="14" TextAlignment="Left" Text="{Binding Path=VentanaBenchMark.IsDualProtocol}" />
+
+        <TextBlock Grid.Row="7" Grid.Column="0" Margin="5,5,5,5" FontSize="14" FontWeight="Bold" TextAlignment="Right">Is Wet Protocol:</TextBlock>
+        <TextBox Grid.Row="7" Grid.Column="1" Margin="5,5,5,5" FontSize="14" TextAlignment="Left" Text="{Binding Path=VentanaBenchMark.IsWetProtocol}" />
+
+        <Button Name="ButtonClose" Grid.Column="1" Grid.Row="8" Width="100" Height="40" HorizontalAlignment="Right" Margin="5,5,5,5" Click="ButtonClose_Click">Close</Button>
 
     </Grid>
 </Window>
