--- a/YellowstonePathology/UI/VentanaStainMappingDialog.xaml
+++ b/YellowstonePathology/UI/VentanaStainMappingDialog.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:YellowstonePathology.UI"
         mc:Ignorable="d"
-        Title="Ventana Stain Mapping" WindowStyle="ToolWindow" WindowStartupLocation="CenterScreen" Height="750"  Width="920">
+        Title="Ventana Stain Mapping" WindowStyle="ToolWindow" WindowStartupLocation="CenterScreen" Height="750"  Width="680">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
@@ -17,11 +17,15 @@
 
         <ListView Name="ListViewStains" Grid.Column="0" Grid.Row="0" Margin="10,10,10,10" ItemsSource="{Binding Path=VentanaBenchMarkCollection}" 
                   HorizontalAlignment="Stretch" FontSize="14" MouseDoubleClick="ListViewStains_MouseDoubleClick" >
+            <ListView.ContextMenu>
+                <ContextMenu>
+                    <MenuItem Header="Delete Stain" Click="MenuItemDeleteStain_Click"></MenuItem>
+                </ContextMenu>
+            </ListView.ContextMenu>
             <ListView.View>
                 <GridView>
                     <GridViewColumn DisplayMemberBinding="{Binding Path=StainName}" Header="Stain" Width="85"/>
                     <GridViewColumn DisplayMemberBinding="{Binding Path=StainerType}" Header="Stainer Type" Width="170"/>
-                    <GridViewColumn DisplayMemberBinding="{Binding Path=Procedure}" Header="Procedure" Width="240"/>
                     <GridViewColumn DisplayMemberBinding="{Binding Path=ProtocolName}" Header="Protocol" Width="170"/>
                     <GridViewColumn DisplayMemberBinding="{Binding Path=YPITestId}" Header="YPI Test Id" Width="85"/>
                     <GridViewColumn DisplayMemberBinding="{Binding Path=BarcodeNumber}" Header="Ventana Id" Width="85"/>
@@ -31,6 +35,10 @@
 
         </ListView>
 
-        <Button Name="ButtonClose" Grid.Column="0" Grid.Row="2" Width="100" Height="40" HorizontalAlignment="Right" Margin="5,5,5,5" Click="ButtonClose_Click">Close</Button>
+        <StackPanel Grid.Column="0" Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right">
+            <Button Name="ButtonAdd" Grid.Column="0" Grid.Row="2" Width="100" Height="40" HorizontalAlignment="Right" Margin="5,5,5,5" Click="ButtonAdd_Click">Add</Button>
+            <Button Name="ButtonClose" Grid.Column="0" Grid.Row="2" Width="100" Height="40" HorizontalAlignment="Right" Margin="5,5,5,5" Click="ButtonClose_Click">Close</Button>
+        </StackPanel>
+        
     </Grid>
 </Window>
