Combine VentanaEdit and Add dialogs

--- a/YellowstonePathology/UI/VentanaStainEditDialog.xaml
+++ b/YellowstonePathology/UI/VentanaStainEditDialog.xaml
@@ -46,7 +46,10 @@
         <TextBlock Grid.Row="7" Grid.Column="0" Margin="5,5,5,5" FontSize="14" FontWeight="Bold" TextAlignment="Right">Is Wet Protocol:</TextBlock>
         <TextBox Grid.Row="7" Grid.Column="1" Margin="5,5,5,5" FontSize="14" TextAlignment="Left" Text="{Binding Path=VentanaBenchMark.IsWetProtocol}" />
 
-        <Button Name="ButtonClose" Grid.Column="1" Grid.Row="8" Width="100" Height="40" HorizontalAlignment="Right" Margin="5,5,5,5" Click="ButtonClose_Click">Close</Button>
+        <StackPanel Grid.Column="1" Grid.Row="8" Orientation="Horizontal" HorizontalAlignment="Right">
+            <Button Name="ButtonAdd" Width="100" Height="40" HorizontalAlignment="left" Margin="5,5,5,5" Click="ButtonAdd_Click">Add</Button>
+            <Button Name="ButtonClose" Grid.Column="1" Grid.Row="8" Width="100" Height="40" HorizontalAlignment="Right" Margin="5,5,5,5" Click="ButtonClose_Click">Close</Button>
+        </StackPanel>
 
     </Grid>
 </Window>
