--- a/YellowstonePathology/UI/Cutting/TestOrderSelectionPage.xaml
+++ b/YellowstonePathology/UI/Cutting/TestOrderSelectionPage.xaml
@@ -28,8 +28,12 @@
             <TextBlock Margin="2,2,2,2" FontSize="20" FontWeight="Bold" Text="{Binding Path=AccessionOrder.PatientDisplayName}"></TextBlock>            
             <TextBlock Margin="2,2,2,2" FontSize="16" FontWeight="Bold" Text="Please select a test."></TextBlock>
         </StackPanel>
+
+        <StackPanel Grid.Column="0" Grid.Row="0" HorizontalAlignment="Right" Orientation="Horizontal">
+            <Button Width="200" Height="60" Click="ButtonPrintPaperLabels_Click" Margin="2,2,2,2">Print</Button>
+            <Button Width="200" Height="60" Click="ButtonBack_Click" Margin="2,2,2,2">Back</Button>
+        </StackPanel>
         
-        <Button Grid.Column="0" Grid.Row="0" HorizontalAlignment="Right" Width="200" Height="60" Click="ButtonBack_Click" Margin="2,2,2,2">Back</Button>
 
         <ListBox Grid.Column="0" Grid.Row="2" ItemsSource="{Binding Path=TestOrderPanelSetOrderViewCollection}" Name="ListViewTestOrderPanelSetOrderViewCollection" 
                 HorizontalAlignment="Stretch" VerticalAlignment="Stretch" BorderThickness="0" ScrollViewer.HorizontalScrollBarVisibility="Disabled" SelectionChanged="ListBoxTestOrders_SelectionChanged">
@@ -68,7 +72,6 @@
                             <TextBlock Grid.Row="1" FontSize="10" Text="{Binding Path=ReportNo}" Margin="2,2,2,2"/>
                             <TextBlock Grid.Row="2" FontSize="10" Text="{Binding Path=PanelSetName}" Margin="2,2,2,2"/>
                             <TextBlock Grid.Row="3" FontSize="10" Text="{Binding Path=OrderedAsDual, Converter={StaticResource OrderedAsDualConverter}}" Margin="2,2,2,2"/>
-                            
                         </Grid>
                     </Border>
                 </DataTemplate>
