--- a/YellowstonePathology/UI/TestWindow.xaml
+++ b/YellowstonePathology/UI/TestWindow.xaml
@@ -11,11 +11,13 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="Auto"></RowDefinition>
+            <RowDefinition Height="Auto"></RowDefinition>
             <RowDefinition Height="*"></RowDefinition>
         </Grid.RowDefinitions>
 
         <Button Grid.Column="1" Grid.Row="0" Height="30" Width="100" Click="Button_SubscribeClick" Margin="5,5,5,5">Subscribe</Button>
         <Button Grid.Column="1" Grid.Row="1" Height="30" Width="100" Click="Button_PublishClick" Margin="5,5,5,5">Publish</Button>
-        
+        <Button Grid.Column="1" Grid.Row="2" Height="30" Width="100" Click="Button_GetTestClick" Margin="5,5,5,5">GetTest</Button>
+
     </Grid>
 </Window>
